# athenagen-hil

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.lock.txt  requirements.txt  run.bat  run_all.bat  settings.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data_parser/: __init__.py  matching.py  parse_emails.py  parse_forms.py  parse_invoices.py  validation.py
dummy_data/: README.md
dummy_data/emails/: email_01.eml  email_02.eml  email_03.eml  email_04.eml  email_05.eml  email_06.eml  email_07.eml  email_08.eml  email_09.eml  email_10.eml
dummy_data/forms/: contact_form_1.html  contact_form_2.html  contact_form_3.html  contact_form_4.html  contact_form_5.html
dummy_data/invoices/: invoice_TF-2024-001.html  invoice_TF-2024-002.html  invoice_TF-2024-003.html  invoice_TF-2024-004.html  invoice_TF-2024-005.html  invoice_TF-2024-006.html  invoice_TF-2024-007.html  invoice_TF-2024-008.html  invoice_TF-2024-009.html  invoice_TF-2024-010.html
dummy_data/templates/: data_extraction_template.csv
scripts/: export_to_sheets.py
tests/: test_artifacts.py  test_emails_basic.py  test_forms_basic.py  test_integration_main.py  test_invoices_basic.py  test_matching.py  test_smoke.py  test_template_df.py  test_template_exists.py  test_validation.py  utils.py
